address nits